fix for huge spacing

--- a/css/inner/builds.less
+++ b/css/inner/builds.less
@@ -89,7 +89,6 @@
     }
     a.sha-one {
       color: @blue;
-      text-transform: uppercase;
       i {
         font-size: 14px;
       }
